--- a/movie-service/src/main/resources/application.yml
+++ b/movie-service/src/main/resources/application.yml
@@ -4,6 +4,7 @@ service:
     port: ${DISCOVERY_PORT}
   auth:
     hostname: ${AUTH_SERVICE_HOSTNAME}
+    port: ${AUTH_SERVICE_PORT}
   mysql:
     hostname: ${MYSQL_HOSTNAME}
     port: ${MYSQL_PORT}
@@ -11,10 +12,9 @@ service:
     username: ${MYSQL_USERNAME}
     password: ${MYSQL_PASSWORD}
 
-server:
-  port: ${SERVER_PORT}
-
 spring:
+  application:
+    name: movie-service
   jpa:
     openInView: false
     databasePlatform: org.hibernate.dialect.MySQL5InnoDBDialect
@@ -25,8 +25,11 @@ spring:
     url: jdbc:mysql://${service.mysql.hostname}:${service.mysql.port}/${service.mysql.database}?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
     username: ${service.mysql.username}
     password: ${service.mysql.password}
-  application:
-    name: auth-service
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://${service.auth.hostname}:${service.auth.port}
 
 eureka:
   client:
