--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,3 +1,3 @@
 FROM adoptopenjdk/openjdk11:alpine-jre
-COPY target/gateway-1.0-SNAPSHOT.jar gateway-1.0-SNAPSHOT.jar
-ENTRYPOINT ["java", "-jar", "/gateway-1.0-SNAPSHOT.jar"]
+COPY target/gateway-service-0.0.1-SNAPSHOT.jar gateway-service-0.0.1-SNAPSHOT.jar
+ENTRYPOINT ["java", "-jar", "/gateway-service-0.0.1-SNAPSHOT.jar"]
