--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -3,16 +3,16 @@ service:
     hostname: ${DISCOVERY_HOSTNAME}
     port: ${DISCOVERY_PORT}
   auth:
-    hostname: ${AUTH_HOSTNAME}
-    port: ${AUTH_PORT}
+    hostname: ${AUTH_SERVICE_HOSTNAME}
+    port: ${AUTH_SERVICE_PORT}
   movie:
-    hostname: ${MOVIE_HOSTNAME}
-    port: ${MOVIE_PORT}
+    hostname: ${MOVIE_SERVICE_HOSTNAME}
+    port: ${MOVIE_SERVICE_PORT}
 
 
 spring:
   application:
-    name: gateway
+    name: gateway-service
   cloud:
     gateway:
       default-filters:
