--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>discovery-service</module>
         <module>movie-service</module>
         <module>gateway-service</module>
+        <module>stream-service</module>
     </modules>
 
     <build>
