--- a/stream-service/src/main/resources/application.yml
+++ b/stream-service/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 s3:
-  accessKey: AKIAWMTNGN6ZZCBNPRXX
-  secretKey: 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
-  bucketName: s3bucket4723
+  accessKey: ${S3_ACCESS_KEY}
+  secretKey: ${S3_SECRET_KEY}
+  bucketName: ${S3_BUCKET_NAME}
 
 storage:
-  local: C:\Users\ductr\Downloads\movie\
+  local: ${LOCAL_STORAGE}
 
 server:
-  port: 8911
+  port: ${SERVER_PORT}
