--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -38,9 +38,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.logstash.logback</groupId>
-			<artifactId>logstash-logback-encoder</artifactId>
-			<version>7.3</version>
+			<groupId>com.github.loki4j</groupId>
+			<artifactId>loki-logback-appender-jdk8</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.14</version>
 		</dependency>
 
 	</dependencies>
