--- a/movie-service/pom.xml
+++ b/movie-service/pom.xml
@@ -17,6 +17,7 @@
         <java.version>11</java.version>
         <spring-cloud.version>2021.0.3</spring-cloud.version>
 <!--        <logback.version>7.2</logback.version>-->
+        <common.lang>3.0</common.lang>
     </properties>
     <dependencies>
         <dependency>
@@ -73,11 +74,20 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>net.logstash.logback</groupId>
-            <artifactId>logstash-logback-encoder</artifactId>
-            <version>7.3</version>
+            <groupId>com.github.loki4j</groupId>
+            <artifactId>loki-logback-appender-jdk8</artifactId>
+            <version>1.4.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${common.lang}</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
