--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -10,8 +10,17 @@ service:
     database: ${MYSQL_DATABASE}
     username: ${MYSQL_USERNAME}
     password: ${MYSQL_PASSWORD}
+  campaign:
+    hostname: ${CAMPAIGN_SERVICE_HOSTNAME}
+    port: ${CAMPAIGN_SERVICE_PORT}
+    resetTokenCampaignId: 1
   loki:
     url: ${LOKI_URL}
+  cron:
+    username: ${CRON_USERNAME}
+    password: ${CRON_PASSWORD}
+
+rptValidityInMinute: ${RPT_VALIDITY_IN_MINUTE}
 
 frontend:
   gateway: ${FRONTEND_GATEWAY}
@@ -39,12 +48,15 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
+            redirectUri: ${GOOGLE_REDIRECT_URI}
           facebook:
             client-id: ${FACEBOOK_CLIENT_ID}
             client-secret: ${FACEBOOK_CLIENT_SECRET}
+            redirectUri: ${FACEBOOK_REDIRECT_URI}
           github:
             client-id: ${GITHUB_CLIENT_ID}
             client-secret: ${GITHUB_CLIENT_SECRET}
+            redirectUri: ${GITHUB_REDIRECT_URI}
 
 eureka:
   client:
