--- a/campaign-service/src/main/resources/application.yml
+++ b/campaign-service/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+topic:
+  campaign: dev-campaign
+  user: dev-user
+  reply:
+    userToCampaign: dev-user-campaign-reply
+    userToStream: dev-user-stream-reply
 loki:
     url: ${LOKI_URL}
 
@@ -22,6 +28,15 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: ${AUTH_SERVICE_URL}
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      group-id: consumer-group
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
 eureka:
   client:
