--- a/movie-service/src/main/resources/application.yml
+++ b/movie-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 topic:
-  movie:
-    request: dev-movie-request
-    response: dev-movie-response
+  movie: dev-movie
+  reply:
+    movieToStream: dev-movie-stream-reply
 
 
 loki:
