--- a/stream-service/src/main/resources/application.yml
+++ b/stream-service/src/main/resources/application.yml
@@ -4,6 +4,13 @@ topic:
   reply:
     userToStream: dev-user-stream-reply
     movieToStream: dev-movie-stream-reply
+
+event:
+  movie:
+    findStoredFile: movie-stored-file.find
+  user:
+    findStoredFile: user-stored-file.find
+
 root:
   location: ${LOCAL_STORAGE}
 
@@ -19,20 +26,17 @@ loki:
 spring:
   application:
     name: stream-service
-  rabbitmq:
-    host: host.docker.internal
-    port: 5672
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: ${AUTH_SERVICE_URL}
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS_URL}
     consumer:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      group-id: consumer-group
+      group-id: ${KAFKA_CONSUMER_GROUP_ID}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
