--- a/cron-service/pom.xml
+++ b/cron-service/pom.xml
@@ -81,6 +81,14 @@
             <artifactId>commons-lang3</artifactId>
             <version>${common.lang}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
