--- a/loki/grafana/datasource-config.yaml
+++ b/loki/grafana/datasource-config.yaml
@@ -4,7 +4,7 @@ datasources:
     type: loki
     access: proxy
     orgId: 1
-    url: http://10.22.5.17:3100
+    url: http://host.docker.internal:3100
     basicAuth: false
     isDefault: true
     version: 1
