--- a/loki/promtail/promtail-config.yaml
+++ b/loki/promtail/promtail-config.yaml
@@ -4,12 +4,12 @@ server:
 positions:
   filename: /tmp/positions.yaml
 clients:
-  - url: http://10.22.5.17:3100/loki/api/v1/push
+  - url: http://host.docker.internal:3100/loki/api/v1/push
 scrape_configs:
   - job_name: spring-boot-app
     static_configs:
       - targets:
-          - localhost
+          - host.docker.internal
         labels:
           job: spring-boot-app
           __path__: /var/log/*log
