--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -4,6 +4,7 @@ topic:
   reply:
     userToCampaign: dev-user-campaign-reply
     userToStream: dev-user-stream-reply
+    userToActivity: dev-user-activity-reply
 
 event:
   user:
