--- a/activity-service/src/main/resources/application.yml
+++ b/activity-service/src/main/resources/application.yml
@@ -8,6 +8,7 @@ topic:
 event:
   movie:
     exist: movie.exist
+    update: movie.update
   user:
     exist: user.exist
     updateExp: user-exp.update
