--- a/movie-service/src/main/resources/application.yml
+++ b/movie-service/src/main/resources/application.yml
@@ -18,6 +18,11 @@ server:
 spring:
   application:
     name: movie-service
+  cache:
+    type: redis
+  redis:
+    host: localhost
+    port: 6379
   jpa:
     openInView: false
     databasePlatform: org.hibernate.dialect.MySQL5InnoDBDialect
