--- a/activity-service/src/main/resources/application.yml
+++ b/activity-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ topic:
 event:
   movie:
     exist: movie.exist
-    update: movie.update
+    updateRating: movie-rating.update
   user:
     exist: user.exist
     updateExp: user-exp.update
