--- a/movie-service/src/main/resources/application.yml
+++ b/movie-service/src/main/resources/application.yml
@@ -8,6 +8,7 @@ event:
   movie:
     exist: movie.exist
     findStoredFile: movie-stored-file.find
+    updateRating: movie-rating.update
 
 loki:
   url: ${LOKI_URL}
